# robocar-oak-camera

./: .Dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  build-docker.sh  pyproject.toml  requirements.txt  setup.py
camera/: cli.py  depthai.py  east.py  oak_pipeline.py  text.py
camera/tests/: test_depthai.py
cv2/: __init__.pyi
cv2-stubs/: __init__.pyi
