[tool.poetry]
name = "robocar-oak-camera"
version = "0.0.0"
description = "Mqtt gateway for oak-lite device"
authors = ["Cyrille Nofficial <cynoffic@cyrilix.fr>"]
readme = "README.md"
packages = [
    { include = "camera" },
    { include = "events" },
]

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
depthai = "^2.17.4.0"
protobuf3 = "^0.2.1"
google = "^3.0.0"
opencv-python = "^4.6.0.66"
blobconverter = "^1.3.0"
protobuf = "^4.21.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
rc-oak-camera = 'camera.cli:execute_from_command_line'

[tool.poetry-dynamic-versioning]
enable = true
style = 'semver'
vcs = 'git'
dirty = true
bump = true
